MobileRobotik/HomeRob/ezmr_ws/log/build_2025-09-22_16-21-51/drive_rob/stderr.log
  File "/home/philnoc/ezmr_ws/install/drive_rob/lib/python3.10/site-packages/drive_rob/robot_heart.py", line 32
    				msg.angular.z = 1.0 s
    				                    ^
SyntaxError: invalid syntax

